[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-node = "=0.4.2"
lightning = "=0.0.125"  # Pin to specific version
lightning-liquidity = "=0.1.0-alpha.6"
eframe = "0.24"
egui = "0.24"
hex = "0.4.3"
qrcode = "0.14"
image = "0.24"
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
cargo-bundle = "0.6"

[package.metadata.bundle]
name = "MyApp"
identifier = "com.example.myapp"
icon = ["icon.png"]
resources = ["assets"]