[package]
name = "my_app"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
ldk-node = "=0.4.2"
lightning = "=0.0.125"  # Pin to specific version
lightning-liquidity = "=0.1.0-alpha.6"
eframe = "=0.30.0"
egui = { version = "0.30.0", default-features = false, features = ["color-hex"] }
egui_extras = { version = "0.30.0", features = ["default"] }
hex = "0.4.3"
qrcode = "0.14"
image = "0.24"
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"
tray-icon = "0.19.2"

[dev-dependencies]
cargo-bundle = "0.6"

[package.metadata.bundle]
name = "MyApp"
identifier = "com.example.myapp"
icon = ["icon.png"]
resources = ["assets"]